--- a/index.html
+++ b/index.html
@@ -1,84 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<title> Amount Check</title>
-	<link rel="stylesheet" href="style.css">
+  <title>TicTacToe</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./game.css">
+
 </head>
 
 <body>
-	<!-- BootStrap navbar menu changes with the screen size-->
-	<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-				 aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				
-			</div>
-			<div id="navbar" class="navbar-collapse collapse">
-				<ul class="nav navbar-nav">
-                    <li><a class="navbar-brand" href="index.html">HOME</a></li>
-					<li>
-						<a href="musa.html">Tic-Tac-Toe</a>
-					</li>
-					<li>
-						<a href="contactus.html">CONTACT US</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-<br>
-<main>
-	<article>
-	<h6 class='mis'>this is dummy..</h6>
-	<section>
-	<h2 class="section-header">Current</h2>
-	<p>I am a new graduate student for the Fall semester pursuing Masters in Computer Science</p>
-	</section>
-	<section Id="past-section">
-	<h3>Background</h3>
-	<p>I completed my undergraduate recently from Mumbai University-India.My undergraduate  majoring was Information Technology.I am a sports person love to play soccer,cricket etc</p>
-	</section>
-	<section  Id="future-section">
-	<h4>Plans</h4>
-	<p>I want to learn software development so that that in  future I would like to be appointed as a software engineer in a well known company</p>
-	</section>
-	<section>
-	<h5>Schedule</h5>
-	<ul><li>WebApplication</li>
-	<li>Object Oriented Programmimg</li>
-	<li>Advance Database</li></ul>
-	<aside >
-	<h6 class="aside-header">Email</h6>
-	<p>S534120@nwmissouri.edu</p>
-	</aside>
-	</section>
-	</article>
-	</main>
-	<!-- A BootStrap container is used to adjust the layout of the contents based on screen size. .container uses pre-built screen sizes, while .container-fluid adjusts continously.-->
-	<div class="container-fluid">
-		<!-- BootStrap grid system using one row that could have several columns (when the screen size is large enough) -->
-	<br>
-	<br>
-	<br>
-			<img src="h.jpg" class="img-circle" width="250" height="250" alt="pro"/><br>
-			<iframe width="729" height="410" src="https://www.youtube.com/embed/bWPMSSsVdPk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>		
+  <header>
+    <h1>Tic Tac Toe</h1>
+  </header>
+  <main>
+    <section id="upper-left"> </section>
+    <section id="upper-mid"> </section>
+    <section id="upper-right"> </section>
 
-	</div>
-	<!-- /container -->
-	<script src="https://code.jquery.com/jquery-3.1.0.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	
+    <section id="center-left"> </section>
+    <section id="center-mid"> </section>
+    <section id="center-right"> </section>
+
+    <section id="lower-left"> </section>
+    <section id="lower-mid"> </section>
+    <section id="lower-right"> </section>
+  </main>
+  <script src="./game.js" defer></script>
+
 </body>
 
 </html>
